[gd_scene load_steps=9 format=3 uid="uid://bp12hldt2mtxq"]

[ext_resource type="Script" uid="uid://cypud0blk13gu" path="res://source/pages/components/navbar/navbar.gd" id="1_ge2q1"]
[ext_resource type="Texture2D" uid="uid://lga36lb0o58t" path="res://addons/plenticons/icons/64x-hidpi/2d/double-chevron-left-white.png" id="1_qjn8w"]
[ext_resource type="Texture2D" uid="uid://b2jt5g5il1xh8" path="res://addons/plenticons/icons/64x-hidpi/2d/double-chevron-right-white.png" id="2_1meuk"]
[ext_resource type="Texture2D" uid="uid://c4h0yal0ddxtq" path="res://addons/plenticons/icons/64x-hidpi/2d/diamond-blue.png" id="3_1meuk"]
[ext_resource type="Texture2D" uid="uid://c73e2lp0copvj" path="res://addons/plenticons/icons/64x-hidpi/2d/circle-green.png" id="3_ge2q1"]
[ext_resource type="Texture2D" uid="uid://bgsjg5yvknkni" path="res://addons/plenticons/icons/64x-hidpi/symbols/todo-white.png" id="4_h7th5"]
[ext_resource type="Texture2D" uid="uid://c5x6twpi3vame" path="res://addons/plenticons/icons/64x-hidpi/2d/cross-red.png" id="5_tpobu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1meuk"]
bg_color = Color(0.03137255, 0.28235295, 0.62352943, 0.827451)

[node name="Navbar" type="Control"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 75.0
grow_horizontal = 2
script = ExtResource("1_ge2q1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1meuk")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="PanelContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Last Page"
icon = ExtResource("1_qjn8w")
text_overrun_behavior = 1
autowrap_mode = 2
icon_alignment = 1
expand_icon = true

[node name="NextButton" type="Button" parent="PanelContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Next Page"
icon = ExtResource("2_1meuk")
icon_alignment = 1
expand_icon = true

[node name="HomeButton" type="Button" parent="PanelContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Home Page"
icon = ExtResource("3_1meuk")
icon_alignment = 1
expand_icon = true

[node name="MainLabel" type="Label" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
theme_override_font_sizes/font_size = 42
text = "Godot Baseball Sim"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MainMenuButton" type="Button" parent="PanelContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Main Menu"
icon = ExtResource("3_ge2q1")
icon_alignment = 1
expand_icon = true

[node name="OptionsButton" type="Button" parent="PanelContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Options Menu"
icon = ExtResource("4_h7th5")
icon_alignment = 1
expand_icon = true

[node name="QuitButton" type="Button" parent="PanelContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Quit"
icon = ExtResource("5_tpobu")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="PanelContainer/HBoxContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/HBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/HBoxContainer/HomeButton" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/HBoxContainer2/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/HBoxContainer2/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/HBoxContainer2/QuitButton" to="." method="_on_quit_button_pressed"]
